# 4lock-windows-service

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs  pipe_server.rs  protocol.rs  service.rs  watchdog.rs
src/commands/: dns.rs  mod.rs  route.rs  vpn.rs
tests/: dns_test.rs  pipe_test.rs  protocol_test.rs  route_test.rs  vpn_test.rs
