[package]
name = "fourlock-windows-service"
version = "0.1.0"
edition = "2021"
description = "Windows service for Hyper-V VM lifecycle and monitoring."

[dependencies]
windows-service = "0.8"
log = "0.4"
simplelog = "0.12"
ctrlc = "3.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows-sys = { version = "0.59", features = [
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Security",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
] }

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }
